--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,17 @@
 version: '3.7'
 
 services:
+  web:
+    image: nginx:1.18
+    container_name: web
+    ports:
+      - "8080:80"
+    volumes:
+      - ./forDocker/nginx/default.conf:/etc/nginx/conf.d/default.conf 
+      - ./public:/app/public
+    depends_on:
+      - app
+
   app:
     container_name: app
     build: .
@@ -24,10 +35,7 @@ services:
     ports:
       - "3306:3306"
     environment:
-      MYSQL_RANDOM_ROOT_PASSWORD: !!str yes
-      MYSQL_DATABASE: step
-      MYSQL_USER: user
-      MYSQL_PASSWORD: user
+      MYSQL_ALLOW_EMPTY_PASSWORD: 1
       TZ: "Asia/Tokyo"
 
   adminer:
