--- a/forDocker/nginx/default.conf
+++ b/forDocker/nginx/default.conf
@@ -1,8 +1,32 @@
+upstream puma {
+    server app:3000;
+  }
+
 server {
-      listen 80;
-      server_name _;
-      root /var/www/html;
-      index index.html;
-      access_log /var/log/nginx/access.log;
-      error_log  /var/log/nginx/error.log;
+    listen 80;
+    server_name localhost;
+
+    access_log /var/log/nginx/access.log;
+    error_log  /var/log/nginx/error.log;
+
+    root /app/public;
+
+    location / {
+      try_files $uri/index.html $uri @puma;
+    }
+
+    location @puma {
+      proxy_set_header X-Real-IP  $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header Host $http_host;
+      proxy_pass http://puma;
+    }
+
+    error_page 404 /404.html;
+    location = /40x.html {
+    }
+
+    error_page 500 502 503 504 /50x.html;
+    location = /50x.html {
+    }
 }
