:hammer: change publish static files from nginx

--- a/forDocker/nginx/default.conf
+++ b/forDocker/nginx/default.conf
@@ -11,10 +11,6 @@ server {
 
     root /app/public;
 
-    location / {
-      try_files $uri/index.html $uri @puma;
-    }
-
     location @puma {
       proxy_set_header X-Real-IP  $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -22,11 +18,32 @@ server {
       proxy_pass http://puma;
     }
 
+    location / {
+      try_files $uri @puma;
+    }
+
+    location ~ ^/(assets|packs)/ {
+      gzip_static on;
+      brotli_static on;
+      expires max;
+      add_header Cache-Control public;
+    }
+
+    location = /favicon.ico {
+      access_log off;
+      log_not_found off;
+    }
+    
+    location = /robots.txt  {
+      access_log off;
+      log_not_found off;
+    }
+
     error_page 404 /404.html;
-    location = /40x.html {
+    location = /404.html {
     }
 
     error_page 500 502 503 504 /50x.html;
-    location = /50x.html {
+    location = /500.html {
     }
 }
